// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyContributions renders the page 1`] = `
<form
  className="usa-form"
  method="post"
  onSubmit={[Function]}
>
  <Title>
    Verify your paid leave contributions from MassTaxConnect
  </Title>
  <Lead>
    <Trans
      i18nKey="pages.employersOrganizationsVerifyContributions.companyNameLabel"
      tOptions={
        Object {
          "company": "Company Name",
        }
      }
    />
    <br />
    <Trans
      i18nKey="pages.employersOrganizationsVerifyContributions.employerIdNumberLabel"
      tOptions={
        Object {
          "ein": "11-111111",
        }
      }
    />
  </Lead>
  <Lead>
    <Trans
      components={
        Object {
          "mass-tax-connect-link": <a
            href="https://mtc.dor.state.ma.us/mtc/_/"
            rel="noreferrer noopener"
            target="_blank"
          />,
        }
      }
      i18nKey="pages.employersOrganizationsVerifyContributions.lead"
    />
  </Lead>
  <Details
    label="Where to find your paid leave contributions"
  >
    <Trans
      components={
        Object {
          "dor-phone-link": <a
            href="tel:(617) 466‑3950"
          />,
          "li": <li />,
          "mass-tax-connect-link": <a
            href="https://mtc.dor.state.ma.us/mtc/_/"
            rel="noreferrer noopener"
            target="_blank"
          />,
          "ol": <ol
            className="usa-list"
          />,
          "recent-filing-periods-link": <a
            href="https://www.mass.gov/info-details/preparing-to-verify-your-employer-paid-family-and-medical-leave-account"
            rel="noreferrer noopener"
            target="_blank"
          />,
        }
      }
      i18nKey="pages.employersOrganizationsVerifyContributions.detailsList"
      values={
        Object {
          "date": "11/20/2011",
        }
      }
    />
  </Details>
  <InputCurrency
    hint="Include the full amount with dollars and cents."
    label="Paid leave contributions from 11/20/2011"
    mask="currency"
    name="withholdingAmount"
    onChange={[Function]}
    smallLabel={true}
    value={0}
  />
  <Button
    loading={false}
    type="submit"
  >
    Submit
  </Button>
</form>
`;

exports[`VerifyContributions renders the page 2`] = `
Array [
  <strong
    key="strong-0"
  >
    Organization:
  </strong>,
  " Company Name",
]
`;

exports[`VerifyContributions renders the page 3`] = `
Array [
  <strong
    key="strong-0"
  >
    Employer ID number (EIN):
  </strong>,
  " 11-111111",
]
`;

exports[`VerifyContributions renders the page 4`] = `
Array [
  "We need more information to verify your identity. We require every employer to verify recent ",
  <a
    href="https://mtc.dor.state.ma.us/mtc/_/"
    key="1"
    rel="noreferrer noopener"
    target="_blank"
  >
    MassTaxConnect
  </a>,
  " data when creating an account. This helps protect your employees and your company information.",
]
`;

exports[`VerifyContributions renders the page 5`] = `
Array [
  "Log into ",
  <a
    href="https://mtc.dor.state.ma.us/mtc/_/"
    key="1"
    rel="noreferrer noopener"
    target="_blank"
  >
    MassTaxConnect
  </a>,
  " or contact your payroll department to complete these steps:",
  <ol
    className="usa-list"
    key="3"
  >
    <li
      key="0"
    >
      On the 
      <strong
        key="strong-1"
      >
        Summary
      </strong>
       page, scroll down to the 
      <strong
        key="strong-3"
      >
        Paid Family and Medical Leave
      </strong>
       section on the left. In the 
      <strong
        key="strong-5"
      >
        Account
      </strong>
       portion, select 
      <strong
        key="strong-7"
      >
        Returns
      </strong>
      .
    </li>
    <li
      key="1"
    >
      Choose 
      <strong
        key="strong-1"
      >
        the last period
      </strong>
       for which a return has been 
      <strong
        key="strong-3"
      >
        received
      </strong>
      . For example, if you remitted your contributions for 3-31-2021, and the return has been processed and designated as ‘received’, you can use the amount from that period to verify your account. If you have not yet remitted your contributions or it is still being processed, use the amount from the most recent period for which you filed that has been processed.
    </li>
    <li
      key="2"
    >
      Go into the return. Click 
      <strong
        key="strong-1"
      >
        View or Amend Return
      </strong>
      . Then select 
      <strong
        key="strong-3"
      >
        Next
      </strong>
       at the bottom. Look to 
      <strong
        key="strong-5"
      >
        line 6
      </strong>
       and you will find the 
      <strong
        key="strong-7"
      >
        Total Contributions Due
      </strong>
      .
    </li>
    <li
      key="3"
    >
      Copy the 
      <strong
        key="strong-1"
      >
        Total Contributions Due
      </strong>
       amount for verification.
    </li>
  </ol>,
  "If you have any questions about your paid leave contributions, please contact the Department of Revenue at ",
  <a
    href="tel:(617) 466‑3950"
    key="5"
  >
    <strong
      key="strong-0"
    >
      (617) 466‑3950
    </strong>
  </a>,
  " from 9am-4pm ET.",
]
`;
